tests/src/frontend/syntax/invalid/where_instead_of_when.sk
fun test(): void {
  1 match {
  | x where (x == 1) -> "Nope\n"
  | x -> "Boom\n"
  }
}

